# darisstore

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.frontend.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.pycharm.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: master.yml
backend/: .coveragerc  Dockerfile  conftest.py  entrypoint.production.sh  entrypoint.sh  entrypoint.test.sh  pyproject.toml  pytest.ini  setup.cfg
backend/common/: admin.py  auth.py  decorators.py  exception_handler.py  fields.py  filters.py  form_fields.py  middleware.py  models.py  paginations.py  processors.py  responses.py  rest_fields.py  serializers_mixin.py  storages.py  tasks.py  utils.py  viewsets.py  widgets.py  yandex_captcha.py
backend/common/admin/: __init__.py  drf_tracking_log.py  filters.py  log_entry.py  mixins.py
backend/common/drf_tracking/: mixins.py  models.py
backend/common/drf_tracking/migrations/: 0001_initial.py  0002_initial.py
backend/common/drf_tracking/tests/: factories.py
backend/common/integrations/: __init__.py  smsc.py  smsr.py  websmsru.py
backend/common/json_celery_logging/: formatter.py  task.py
backend/common/migrations/: 0001_initial.py
backend/common/mixins/: __init__.py  logging.py  serializer.py  viewset.py
backend/common/models/: __init__.py  drf_tracking_log.py
backend/common/static/common/css/: extend_json_admin.css  ppoi-widget.css
backend/config/: admin.py  celery.py  routers.py  settings.py  urls.py
backend/sitemap/: bases.py  sitemaps.py  views.py
backend/sitemap/templates/sitemap/: sitemap.xml
backend/sitemap/tests/: test_views.py
backend/users/: constants.py  forms.py  statuses.py  utils.py
backend/users/admin/: user.py
backend/users/backends/: email.py  login_phone.py  phone.py  send_mail.py
backend/users/migrations/: 0001_initial.py
backend/users/models/: managers.py  otp_token.py  user.py
backend/users/serializers/: __init__.py  create_email_otp_token.py  create_otp_token.py  today_min_max.py  user.py  validate_email_otp_token.py  validate_otp_token.py
backend/users/tests/: factories.py  test_email_otp_token.py  test_otp_token.py  test_user.py
backend/users/viewsets/: __init__.py  otp_token.py  otp_token_viewset.py  user.py  user_viewset.py
docs/: api.md  database.md  imgproxy.md  instagram.md  linter.md  monitoring.md  pre-commit.md  readme_example.md  roadmap_template_project.drawio  security.md  style_guilde.md
docs/backend/: base.md
flower/: Dockerfile
frontend/: .gitignore  .lintstagedrc.cjs  .npmrc  .simple-git-hooks.cjs  .simple-git-hooks.js  .stylelintrc  Dockerfile  Dockerfile.packages  README.md  README_FILES.md  app.config.ts  app.vue  commitlint.config.mjs  error.vue  eslint.config.mjs  ida-stories.json  jsconfig.json  nuxt.config.js  nuxt.config.ts  nuxt.dev.config.js  nuxt.dev.config.ts  nuxt.prod.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/app/: multiCache.serverOptions.ts  types.ts
frontend/assets/: README.md
frontend/assets/scss/: bundle.scss  default.scss
frontend/components/: README.md
frontend/components/common/: LogoIda.vue  Overlay.vue  TheSpinner.vue  types.ts
frontend/components/icons/: LogoIcon.vue
frontend/components/layout/: TheFooter.vue  TheHeader.vue  TheModal.vue  VModal.vue  types.ts
frontend/components/modals/: BaseModal.vue  ContactModal.vue  HelloModal.vue  types.ts
frontend/components/sliders/: HeroBannerSlider.vue  MediaSlide.vue  Navigation.vue  types.ts
frontend/composables/: useSort.ts
frontend/composables/animation/: useHeightAnimation.ts
frontend/composables/common/: useThirdPartyScripts.ts
frontend/composables/slider/: types.ts  useSlider.ts
frontend/config/: README.md  apiConfig.js  extendRoutesConfig.ts  headConfig.js  imgProxy.js  pluginsConfig.js
frontend/config/api/: mainPage.js  publications.js
frontend/config/extend-routes/: expertiseRoutes.ts
frontend/config/head/: favicons.js  favicons.ts  scripts.js  scripts.ts  types.ts
frontend/config/modules/: commonModules.js  devModules.js  nuxtDelayHydrationExclude.js  prodModules.js
frontend/config/plugins/: gsap.js  swiper.js
frontend/directives/: index.js  intersect.js  intersect.ts  resize.js  vanilla-lazyload.js
frontend/docs/: project-filter.md
frontend/layouts/: default.vue  empty.vue  error.vue  errorLayout.vue
frontend/mixins/: intersectionMixin.js  lazyLoadSlider.js
frontend/pages/: index.vue
frontend/pages/coaches/: index.vue
frontend/plugins/: directives.ts  fetchData.ts  gsap.client.ts  init.server.js  sentry.client.ts  sentry.js  swiper.client.ts  v-calendar.client.ts  vue-touch-events.js
frontend/public/favicons/: site.webmanifest
frontend/repository/: factory.ts
frontend/server-middleware/: headers.js
frontend/server/middleware/: headers.js  proxy.client.ts
frontend/server/plugins/: sentry.ts
frontend/store/: README.md  domain.js  header.ts  index.js  menu.js
frontend/tests/: hydration.spec.ts
frontend/types/: common.ts  filter.ts  index.d.ts  models.ts
gitlab/: backup.yml  build.yml  deploy.yml  linter.yml  post_release.yml  pre_build.yml  release.yml  secret-detection.yml  test.yml
imgproxy/: Dockerfile
nginx/: Dockerfile  json_logging  nginx.conf.esh
nginx/error_pages/: 404.html  500.html  502.html  50x.html
nginx/static/: yandex_e8c6b34850679ee0.html
promtail/: promtail.yml
(+158 files in other folders)
