[tool.poetry]
name = "Template project"
version = "0.1.0"
description = "template project"
license = "MIT"
authors=["Egor Ponyavin <ep@idaproject.com>"]

[tool.poetry.dependencies]
# core
python = "3.12.*"
Django = "5.0.*"
psycopg2-binary = "2.9.*"
sentry-sdk = "1.39.*"
requests = "2.31.*"
boto3 = "1.20.*"
django-redis-cache = "3.0.*"
django-storages = "1.12.*"
gunicorn = "^20.1.0"
django-user-agents = "^0.4.0"

# Models \ Admin
django-solo = "2.0.*"
django-ckeditor = "6.2.*"
django-admin-sortable2 = "2.1.*"
django-location-field = "~2.1.0"
phonenumbers = "^8.12.29"
django-phonenumber-field = "5.2.*"
django-admin-list-filter-dropdown = "~1.0.3"

#Bot
g4f = {extras = ["all"], version = "0.3.2.8"}
python-telegram-bot = {extras = ["ext"], version = "21.5.*"}

# Rest
djangorestframework = "3.14.*"
django-filter = "22.*"
drf-spectacular = "0.24.*"

# Test
factory-boy = "^3.2.0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
pytest-sugar = "^0.9.4"

# Celery
celery = "^5.1.2"
django-celery-email = "~3.0.0"

# Others
Pillow = "10.0.1"
django-robots = "5.0.*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"

# linting
ruff = "0.0.*"

# Typehinting
mypy = "1.*"
mypy-extensions = "1.*"
django-stubs = "1.14.*"
djangorestframework-stubs="1.8.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN401",
    "ARG001",
    "ARG002",
    "TID252",
    "RUF001",
    "RUF002",
    "FBT001",
    "FBT002",
    "PTH118",
    "PTH122",
    "S101",
    "A001",
    "A003",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D106",
    "D211",
    "D213",
    "D404",
    "EXE002",
    "COM812",
]
src = ["."]
ignore-init-module-imports = true
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "**/migrations/**",
    "__init__.py",
    "apps.py",
    "**/tests/**",
    "**/common/**"
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10